test/expected/cli/let_error_location.out
== default argument location ==
shit: 1:12: error: Builtin `let`: Unexpected character in the arithmetic expression.
     1 |  a=0; let a = 2; echo unreached
       |             ^~ here.
note: This is not a valid operator or operand.
rc=1
== bash soft argument location ==
shit: 1:12: error: Builtin `let`: Unexpected character in the arithmetic expression.
     1 |  a=0; let a = 2; echo "status=$? after"
       |             ^~ here.
shit: note: This is not a valid operator or operand.
status=1 after
rc=0
== later argument location ==
shit: 1:15: error: Builtin `let`: Unfinished expression.
     1 |  let "first=1" "bad=1 +" "later=3"; echo "status=$? later=${later-unset}"
       |                ^~~~~~~~~ here.
shit: note: An operand is missing.
status=1 later=unset
rc=0
== diagnostic catalog ==
SC2219=absent
1
